@@ -95,3 +95,4 @@
 - Improved futile_union_intersection_subtraction, handles when a branch of subtracion has a selection (Rev 209)
 - Can load relations specified in command line (Rev 210)
 - Using fakeroot instead of su in make debian (Rev 214)
+- Fixed problem with float numbers with selection of certain relations (Rev 215)
